# FLY-Halo

./: LICENSE  README.md  README_CN.md
Halo-demo/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
Halo-demo/components/esp_lcd_touch_cst816s/: .component_hash  esp_lcd_touch_cst816s.c  idf_component.yml
Halo-demo/components/lvgl/: .component_hash  idf_component.yml  lv_conf.h
Halo-demo/components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
Halo-demo/main/: CMakeLists.txt  Kconfig.projbuild  config.h  idf_component.yml  lvgl_demo_ui.c  main.c
Halo-demo/main/static/images/: boot_mellow.c
Halo-demo/main/tools/wifi/: wifi.c  wifi.h
